# milstdlint

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
demos/01-basic/: SCENARIO.md  sample_secret_memo.txt
demos/02-clean/: SCENARIO.md  clean_unclassified.txt
demos/03-mixed/: SCENARIO.md  oporder_mixed.txt
demos/04-cui-spec/: SCENARIO.md  cui_interface_spec.txt
demos/05-nofile-banner/: SCENARIO.md  draft_no_banner.txt
demos/06-line-length-tab/: SCENARIO.md  tm_formatting.txt
demos/07-portion-mismatch-ts/: SCENARIO.md  intsum_undermarked.txt
demos/08-clean-tdp/: SCENARIO.md  tdp_cover.txt
demos/09-unknown-token/: SCENARIO.md  memo_bad_token.txt
demos/10-sarif-ci/: SCENARIO.md  release_gate.txt
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
integrations/: webhook.py
milstdlint/: __init__.py  cli.py  connect.py  core.py  mcp_server.py
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_connect.py  test_hardening.py  test_smoke.py
